// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle missing quality profiles and quality gates 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": undefined,
            "qualityProfiles": undefined,
            "tags": [],
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": undefined,
            "qualityProfiles": undefined,
            "tags": [],
          }
        }
        measures={[]}
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": undefined,
          "qualityProfiles": undefined,
          "tags": [],
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.TRK"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render a private project correctly 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
        <PrivacyBadgeContainer
          qualifier="TRK"
          visibility="private"
        />
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "private",
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "private",
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "private",
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.TRK"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render an app correctly: default 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      application.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "APP",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "APP",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="APP"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.APP"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render app correctly when regulatoryReport feature is not enabled 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
        <PrivacyBadgeContainer
          qualifier="TRK"
          visibility="public"
        />
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "public",
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.TRK"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
        <PrivacyBadgeContainer
          qualifier="TRK"
          visibility="public"
        />
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "public",
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.TRK"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render correctly: no badges 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
        <PrivacyBadgeContainer
          qualifier="TRK"
          visibility="public"
        />
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "public",
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render correctly: no badges, no notifications 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
        <PrivacyBadgeContainer
          qualifier="TRK"
          visibility="public"
        />
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "public",
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render correctly: with notifications 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
        <PrivacyBadgeContainer
          qualifier="TRK"
          visibility="public"
        />
      </div>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
            "visibility": "public",
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "visibility": "public",
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.TRK"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`should render with description 1`] = `
<Fragment>
  <div>
    <h2
      className="big-padded bordered-bottom"
      tabIndex={-1}
    >
      project.info.title
    </h2>
  </div>
  <div
    className="overflow-y-auto"
  >
    <div
      className="big-padded bordered-bottom"
    >
      <div
        className="display-flex-center"
      >
        <h3
          className="spacer-right"
        >
          project.info.description
        </h3>
      </div>
      <p
        className="it__project-description"
      >
        Lorem ipsum
      </p>
      <MetaTags
        component={
          {
            "breadcrumbs": [],
            "description": "Lorem ipsum",
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        onComponentChange={[MockFunction]}
      />
    </div>
    <div
      className="big-padded bordered-bottom it__project-loc-value"
    >
      <MetaSize
        component={
          {
            "breadcrumbs": [],
            "description": "Lorem ipsum",
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        measures={[]}
      />
    </div>
    <div
      className="big-padded bordered-bottom"
    >
      <MetaQualityGate
        qualityGate={
          {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          }
        }
      />
      <withLanguagesContext(MetaQualityProfiles)
        headerClassName="big-spacer-top"
        profiles={
          [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ]
        }
      />
    </div>
    <MetaLinks
      component={
        {
          "breadcrumbs": [],
          "description": "Lorem ipsum",
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
    <div
      className="big-padded bordered-bottom"
    >
      <MetaKey
        componentKey="my-project"
        qualifier="TRK"
      />
    </div>
    <ul>
      <li>
        <Memo(DrawerLink)
          label="overview.badges.get_badge.TRK"
          onPageChange={[MockFunction]}
          to={1}
        />
      </li>
      <li>
        <Memo(DrawerLink)
          label="project.info.to_notifications"
          onPageChange={[MockFunction]}
          to={2}
        />
      </li>
      <li
        className="big-padded bordered-bottom"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
      </li>
    </ul>
  </div>
</Fragment>
`;
